// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compileClassName — снапшоты валидные селекторы 1`] = `
[
  {
    "cls": ".cF00",
    "raw": "cF00",
  },
  {
    "cls": ".tDark",
    "raw": "tDark",
  },
  {
    "cls": ".m12",
    "raw": "m12",
  },
  {
    "cls": ".cF00\\<\\.p",
    "raw": "cF00<.p",
  },
  {
    "cls": ".cF00\\<\\.parent\\>1\\.child",
    "raw": "cF00<.parent>1.child",
  },
  {
    "cls": ".cF00\\<\\.a\\>\\.b",
    "raw": "cF00<.a>.b",
  },
  {
    "cls": ".cF00\\@m\\<\\.p\\:h",
    "raw": "cF00@m<.p:h",
  },
  {
    "cls": ".tDark\\@t\\<\\.p",
    "raw": "tDark@t<.p",
  },
  {
    "cls": ".cF00\\*2\\<\\.p",
    "raw": "cF00*2<.p",
  },
  {
    "cls": ".cF00\\*3\\<\\.a\\>\\.b\\:h",
    "raw": "cF00*3<.a>.b:h",
  },
  {
    "cls": ".cF00\\:h",
    "raw": "cF00:h",
  },
  {
    "cls": ".cF00\\:f",
    "raw": "cF00:f",
  },
  {
    "cls": ".cF00\\:a",
    "raw": "cF00:a",
  },
  {
    "cls": ".cF00\\@m\\<\\.page\\>1\\.header\\>2\\.nav\\:a",
    "raw": "cF00@m<.page>1.header>2.nav:a",
  },
  {
    "cls": ".tLight\\@t\\<\\.root\\>1\\.body\\>2\\.container",
    "raw": "tLight@t<.root>1.body>2.container",
  },
]
`;

exports[`compileSelector — снапшоты валидные селекторы 1`] = `
[
  {
    "css": ".element",
    "raw": "cF00",
  },
  {
    "css": ".element",
    "raw": "tDark",
  },
  {
    "css": ".element",
    "raw": "m12",
  },
  {
    "css": ".p .element",
    "raw": "cF00<.p",
  },
  {
    "css": ".parent .element>.child",
    "raw": "cF00<.parent>1.child",
  },
  {
    "css": ".a .element .b",
    "raw": "cF00<.a>.b",
  },
  {
    "css": ".p .element",
    "raw": "cF00@m<.p:h",
  },
  {
    "css": ".p .element",
    "raw": "tDark@t<.p",
  },
  {
    "css": ".p .element",
    "raw": "cF00*2<.p",
  },
  {
    "css": ".a .element .b",
    "raw": "cF00*3<.a>.b:h",
  },
  {
    "css": ".element",
    "raw": "cF00:h",
  },
  {
    "css": ".element",
    "raw": "cF00:f",
  },
  {
    "css": ".element",
    "raw": "cF00:a",
  },
  {
    "css": ".page .element>.header>*>.nav",
    "raw": "cF00@m<.page>1.header>2.nav:a",
  },
  {
    "css": ".root .element>.body>*>.container",
    "raw": "tLight@t<.root>1.body>2.container",
  },
]
`;

exports[`compileStates — снапшоты валидные селекторы (с синонимами) 1`] = `
[
  {
    "raw": "cF00",
    "states": "",
  },
  {
    "raw": "tDark",
    "states": "",
  },
  {
    "raw": "m12",
    "states": "",
  },
  {
    "raw": "cF00<.p",
    "states": "",
  },
  {
    "raw": "cF00<.parent>1.child",
    "states": "",
  },
  {
    "raw": "cF00<.a>.b",
    "states": "",
  },
  {
    "raw": "cF00@m<.p:h",
    "states": ":hover",
  },
  {
    "raw": "tDark@t<.p",
    "states": "",
  },
  {
    "raw": "cF00*2<.p",
    "states": "",
  },
  {
    "raw": "cF00*3<.a>.b:h",
    "states": ":hover",
  },
  {
    "raw": "cF00:h",
    "states": ":hover",
  },
  {
    "raw": "cF00:f",
    "states": ":focus",
  },
  {
    "raw": "cF00:a",
    "states": ":active",
  },
  {
    "raw": "cF00@m<.page>1.header>2.nav:a",
    "states": ":active",
  },
  {
    "raw": "tLight@t<.root>1.body>2.container",
    "states": "",
  },
]
`;

exports[`Краевые случаи — ошибки парсера невалидный ввод бросает Error 1`] = `
[
  {
    "error": "Invalid stem: """,
    "ok": false,
  },
  {
    "lexeme": {
      "context": [],
      "multiplier": null,
      "raw": "x",
      "selfClasses": [],
      "stem": {
        "arg": "",
        "important": false,
        "raw": "x",
        "tag": "x",
      },
      "stemMedia": null,
    },
    "ok": true,
  },
  {
    "error": "Invalid stem: "<.p"",
    "ok": false,
  },
  {
    "error": "Invalid stem: ":h"",
    "ok": false,
  },
  {
    "error": "Invalid stem: """,
    "ok": false,
  },
]
`;

exports[`Полный компилятор — снапшот тройной вывод для каждого селектора 1`] = `
[
  {
    "className": ".cF00",
    "raw": "cF00",
    "selector": ".element",
    "states": "",
  },
  {
    "className": ".tDark",
    "raw": "tDark",
    "selector": ".element",
    "states": "",
  },
  {
    "className": ".m12",
    "raw": "m12",
    "selector": ".element",
    "states": "",
  },
  {
    "className": ".cF00\\<\\.p",
    "raw": "cF00<.p",
    "selector": ".p .element",
    "states": "",
  },
  {
    "className": ".cF00\\<\\.parent\\>1\\.child",
    "raw": "cF00<.parent>1.child",
    "selector": ".parent .element>.child",
    "states": "",
  },
  {
    "className": ".cF00\\<\\.a\\>\\.b",
    "raw": "cF00<.a>.b",
    "selector": ".a .element .b",
    "states": "",
  },
  {
    "className": ".cF00\\@m\\<\\.p\\:h",
    "raw": "cF00@m<.p:h",
    "selector": ".p .element",
    "states": ":hover",
  },
  {
    "className": ".tDark\\@t\\<\\.p",
    "raw": "tDark@t<.p",
    "selector": ".p .element",
    "states": "",
  },
  {
    "className": ".cF00\\*2\\<\\.p",
    "raw": "cF00*2<.p",
    "selector": ".p .element",
    "states": "",
  },
  {
    "className": ".cF00\\*3\\<\\.a\\>\\.b\\:h",
    "raw": "cF00*3<.a>.b:h",
    "selector": ".a .element .b",
    "states": ":hover",
  },
  {
    "className": ".cF00\\:h",
    "raw": "cF00:h",
    "selector": ".element",
    "states": ":hover",
  },
  {
    "className": ".cF00\\:f",
    "raw": "cF00:f",
    "selector": ".element",
    "states": ":focus",
  },
  {
    "className": ".cF00\\:a",
    "raw": "cF00:a",
    "selector": ".element",
    "states": ":active",
  },
  {
    "className": ".cF00\\@m\\<\\.page\\>1\\.header\\>2\\.nav\\:a",
    "raw": "cF00@m<.page>1.header>2.nav:a",
    "selector": ".page .element>.header>*>.nav",
    "states": ":active",
  },
  {
    "className": ".tLight\\@t\\<\\.root\\>1\\.body\\>2\\.container",
    "raw": "tLight@t<.root>1.body>2.container",
    "selector": ".root .element>.body>*>.container",
    "states": "",
  },
]
`;
